--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
   }
   
   #newGrocery {
-    background-color: white;
+    background-color: rgb(202, 8, 8);
     color: var(--comment);
     padding: 0.5em;
     width: 20em;
@@ -68,7 +68,7 @@
   }
   
   .groceryItem {
-    background-color: white;
+    background-color: rgb(252, 206, 1);
     color: var(--background);
     margin: 0.5em;
     width: 24em;
