--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --background: #292d3e;
+    --background: #4d5da5;
     --foreground: #959dcb;
     --comment: #676e95;
     --accent: #c3e88d;
